[gd_scene load_steps=4 format=3 uid="uid://6f1lxqbet63n"]

[ext_resource type="Script" path="res://src/interfaces/ui/boot/ggte_splashscreen/ggte_splash.gd" id="1_txu0o"]
[ext_resource type="VideoStream" path="res://src/interfaces/ui/boot/assets/video/bootsplash.ogv" id="2_p0jic"]
[ext_resource type="Texture2D" uid="uid://cotc5og5seekp" path="res://src/interfaces/ui/boot/assets/images/ggte_logo.png" id="3_7seh5"]

[node name="GgteSplashscreen" type="Node2D"]
script = ExtResource("1_txu0o")
prepare_move_other_screen = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.164706, 0.207843, 0.254902, 1)

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("3_7seh5")
expand_mode = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_p0jic")
expand = true

[node name="VideoPlayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="finished" from="CanvasLayer/Control/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="timeout" from="VideoPlayTimer" to="." method="_on_video_play_timer_timeout"]
